kubernetes/authorization-admin-ui-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-admin-ui
  namespace: authz
  labels:
    app: authorization-admin-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: authorization-admin-ui-pod
      environment: DEV
      tier: ui
  template:
    metadata:
      labels:
        app: authorization-admin-ui-pod
        environment: DEV
        tier: ui
    spec:
      containers:
        - name: authorization-admin-ui
          image: xaxiseng/authorization-admin-ui:1.0-SNAPSHOT
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: 1024M
          ports:
            - containerPort: 5000
              name: server-port
          volumeMounts:
            - name: logs
              mountPath: /app/logs
      volumes:
        - name: logs
          nfs:
            path: /export/dev/authorization-admin-ui
            server: 10.82.26.250
      imagePullSecrets:
        - name: k8smpf-docker
